--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,3 @@
-baseURL = 'http://example.org/'
+baseURL = 'https://doafirst.github.io/hugo_website'
 languageCode = 'en-us'
 title = 'My New Hugo Site'
