--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
 baseURL = 'https://doafirst.github.io/hugo_website'
 languageCode = 'en-us'
 title = 'My New Hugo Site'
-theme = "diary"
+theme = "minima"
